--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "stephanie-beauzile-d-portfolio",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "Portfolio of a junior UI/UX Web designer looking for great opportunites",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Stephanie Beauzile-Domond <stephanie.beauzile.d@gmail.com>",
   "dependencies": {
     "gatsby": "^2.23.10",
     "gatsby-image": "^2.4.8",
