--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Stephanie Beauzile-Domond <stephanie.beauzile.d@gmail.com>",
   "dependencies": {
+    "bootstrap": "^4.5.0",
     "gatsby": "^2.23.10",
     "gatsby-image": "^2.4.8",
     "gatsby-plugin-google-fonts": "^1.0.1",
@@ -20,6 +21,7 @@
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "smooth-scrollbar": "^8.5.2"
